--- a/modules/ROOT/pages/common/common-note-mule4.adoc
+++ b/modules/ROOT/pages/common/common-note-mule4.adoc
@@ -1,9 +1,7 @@
-= THIS
+== Notes on Mule 4 behavior (for Mule 3 users)
 ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
-
-Notes on Mule 4 behavior (for Mule 3 users):
 
 * The examples above use the File connector to read a file in the middle of the flow. The information posted through the `<http:listener>` component is written to each FTP or SFTP site multiple times. Because the component makes use of the xref:4.1@mule-runtime::streaming-about.adoc[repeatable streams feature], you do not need to worry about consuming the stream multiple times.
 
